Fixed alignment problem.

--- a/style.css
+++ b/style.css
@@ -23,5 +23,5 @@ label {
     width: 200px;
 }
 div {
-    align-content: center;
+    text-align: center;
 }
